<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/inicio" />
    <item
        android:id="@+id/nav_catalogo"
        android:icon="@android:drawable/ic_menu_gallery"
        android:title="@string/catalogo" />
    <item
        android:id="@+id/nav_perfil"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/perfil" />
    <item
        android:id="@+id/nav_admin"
        android:icon="@android:drawable/ic_lock_lock"
        android:title="@string/admin"
        android:visible="false" />
    <item
        android:id="@+id/nav_logout"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:title="@string/cerrar_sesion" />
</menu>