<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/onboarding_background_color"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".activities.OnboardingActivity">

    <!-- Espacio flexible superior -->
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="169dp"
        android:layout_height="149dp"
        android:layout_gravity="center_horizontal"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/textViewAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text="@string/app_name"
        android:textColor="@color/color_bienvenidaText"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/textViewOnboardingMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:text="@string/onboarding_message"
        android:textColor="@color/onboarding_text_color"
        android:textSize="18sp" />

    <!-- Espacio flexible intermedio para empujar el botón al fondo -->
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5" />

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/onboarding_button_background_color"
        android:text="@string/start_button"
        android:textColor="@color/onboarding_button_text_color" />

    <TextView
        android:id="@+id/textViewRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:text="@string/register"
        android:textColor="@color/register_text_color"
        android:textSize="16sp" />

</LinearLayout>
